# ECS-Framework-Test-Flappy-Game

./: .ycm_extra_conf.py  CMakeLists.txt
runtime/: config.cfg  entities.cfg
src/: main.cpp
src/components/: CollisionComponent.h  GUITextComponent.h  GraphicsComponent.h  MovementComponent.h  OrientationComponent.h  PositionComponent.h  RenderingComponent.h  SizeComponent.h
src/events/: CollisionEvent.h
src/events/system/: ApplicationClosed.h  KeyPressed.h  KeyReleased.h  MouseButtonPressed.h  MouseButtonReleased.h  MouseMoved.h  MouseWheelMoved.h  TextEntered.h  UnknownSFMLEvent.h
src/states/: PlayState.cpp  PlayState.h  PushdownAutomata.cpp  PushdownAutomata.h
src/tasks/: AttachedCameraController.h  CameraMouseController.cpp  CameraMouseController.h  CollisionDetector.cpp  CollisionDetector.h  Controller.cpp  Controller.h  InputEcho.cpp  InputEcho.h  Renderer.cpp  Renderer.h  SFMLInputProxy.cpp  SFMLInputProxy.h  VerletIntegrator.cpp  VerletIntegrator.h
